# ds-github-tutorial

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
data/: README.md
docs/: project_structure.md
notebooks/: README.md
scripts/: download_data.py  run_pipeline.py
src/rnaseq_tutorial/: __init__.py  data.py  features.py  model.py  plots.py
tests/: test_features.py  test_plots.py
